# internal/app/subsystems/api/grpc/pb/suscription_grpc.pb.go
@@ -1,0 +1,121 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             v5.29.3
+// source: internal/app/subsystems/api/grpc/pb/suscription.proto
+
+package pb
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	Suscriptions_CreateSuscription_FullMethodName = "/suscription.Suscriptions/CreateSuscription"
+)
+
+// SuscriptionsClient is the client API for Suscriptions service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type SuscriptionsClient interface {
+	CreateSuscription(ctx context.Context, in *CreateSuscriptionRequest, opts ...grpc.CallOption) (*CreateSuscriptionResponse, error)
+}
+
+type suscriptionsClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewSuscriptionsClient(cc grpc.ClientConnInterface) SuscriptionsClient {
+	return &suscriptionsClient{cc}
+}
+
+func (c *suscriptionsClient) CreateSuscription(ctx context.Context, in *CreateSuscriptionRequest, opts ...grpc.CallOption) (*CreateSuscriptionResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateSuscriptionResponse)
+	err := c.cc.Invoke(ctx, Suscriptions_CreateSuscription_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// SuscriptionsServer is the server API for Suscriptions service.
+// All implementations must embed UnimplementedSuscriptionsServer
+// for forward compatibility.
+type SuscriptionsServer interface {
+	CreateSuscription(context.Context, *CreateSuscriptionRequest) (*CreateSuscriptionResponse, error)
+	mustEmbedUnimplementedSuscriptionsServer()
+}
+
+// UnimplementedSuscriptionsServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedSuscriptionsServer struct{}
+
+func (UnimplementedSuscriptionsServer) CreateSuscription(context.Context, *CreateSuscriptionRequest) (*CreateSuscriptionResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateSuscription not implemented")
+}
+func (UnimplementedSuscriptionsServer) mustEmbedUnimplementedSuscriptionsServer() {}
+func (UnimplementedSuscriptionsServer) testEmbeddedByValue()                      {}
+
+// UnsafeSuscriptionsServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to SuscriptionsServer will
+// result in compilation errors.
+type UnsafeSuscriptionsServer interface {
+	mustEmbedUnimplementedSuscriptionsServer()
+}
+
+func RegisterSuscriptionsServer(s grpc.ServiceRegistrar, srv SuscriptionsServer) {
+	// If the following call pancis, it indicates UnimplementedSuscriptionsServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&Suscriptions_ServiceDesc, srv)
+}
+
+func _Suscriptions_CreateSuscription_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateSuscriptionRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SuscriptionsServer).CreateSuscription(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Suscriptions_CreateSuscription_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SuscriptionsServer).CreateSuscription(ctx, req.(*CreateSuscriptionRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Suscriptions_ServiceDesc is the grpc.ServiceDesc for Suscriptions service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Suscriptions_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "suscription.Suscriptions",
+	HandlerType: (*SuscriptionsServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateSuscription",
+			Handler:    _Suscriptions_CreateSuscription_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "internal/app/subsystems/api/grpc/pb/suscription.proto",
+}
