# internal/kernel/t_api/request.go
@@ -23,8 +23,8 @@ type Request struct {
 	// CALLBACKS
 	CreateCallback *CreateCallbackRequest
 
-	// NOTIFY
-	CreateNotify *CreateNotifyRequest
+	// SUSCRIPTIONS
+	CreateSuscription *CreateSuscriptionRequest
 
 	// SCHEDULES
 	ReadSchedule    *ReadScheduleRequest
@@ -116,17 +116,17 @@ func (r *CreateCallbackRequest) String() string {
 	return fmt.Sprintf("CreateCallback(id=%s, promiseId=%s, rootPromiseId=%s, timeout=%d, recv=%s)", r.Id, r.PromiseId, r.RootPromiseId, r.Timeout, r.Recv)
 }
 
-// Notify
+// Suscription
 
-type CreateNotifyRequest struct {
+type CreateSuscriptionRequest struct {
 	Id        string          `json:"id"`
 	PromiseId string          `json:"promiseId"`
 	Timeout   int64           `json:"timeout"`
 	Recv      json.RawMessage `json:"recv"`
 }
 
-func (r *CreateNotifyRequest) String() string {
-	return fmt.Sprintf("CreateNotify(id=%s, promiseId=%s, recv=%s)", r.Id, r.PromiseId, r.Recv)
+func (r *CreateSuscriptionRequest) String() string {
+	return fmt.Sprintf("CreateSuscription(id=%s, promiseId=%s, recv=%s)", r.Id, r.PromiseId, r.Recv)
 }
 
 // Schedules
@@ -296,9 +296,9 @@ func (r *Request) String() string {
 	case CreateCallback:
 		return r.CreateCallback.String()
 
-	// NOTIFY
-	case CreateNotify:
-		return r.CreateNotify.String()
+	// SUSCRIPTION
+	case CreateSuscription:
+		return r.CreateSuscription.String()
 
 	// SCHEDULES
 	case ReadSchedule:
